--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 49px;
-  background: linear-gradient(to left top,#78e7f3, #9bd7e8, #e8f6ca, #fdf8cf);
+  gap: 45px;
+  background: linear-gradient(#e66465, #9198e5);
   background-attachment: fixed;
 }
 table,
